//
//proto3proto2
//protobuf
//https://www.jianshu.com/p/4443c28d4bf7
syntax = "proto3";

//，protocgo
package go_protos;

option go_package = "./go_protos";

message HistoryItem {
    bytes                   GenerateId   = 1 ; //
    bool                    IsIn         = 2 ; //，true=;false=;
    uint64                  Type         = 3 ; //
    repeated  bytes         InAddr       = 4 ; //
    repeated  bytes         OutAddr      = 5 ; //
    uint64                  Value        = 6 ; //
    bytes                   Txid         = 7 ; //id
    uint64                  Height       = 8 ; //
    bytes                   Payload      = 9 ; //
}

